--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -84,7 +84,7 @@
         </button>
       </div>
       <div class="modal-body">
-          <div class=" mb-5" *ngIf="currentRetro && isCheckPage()" >
+          <div class=" mb-5"  >
     
     
             <div class="row" *ngIf="isLeader()">
