--- a/src/app/workshop/login/login.component.html
+++ b/src/app/workshop/login/login.component.html
@@ -30,7 +30,7 @@
         <small *ngIf="loginForm.get('password').errors?.required" class="text-danger">Şifre giriniz</small>
       </div>
     </div>
-
+<!-- 
     <div class="form-group " [ngClass]="{ 'input-group-focus': focus === true }">
 
       <label for="username">Takma Ad</label>
@@ -41,7 +41,7 @@
         <small *ngIf="loginForm.get('alias').errors?.pattern" class="text-danger">Takma ad için sadece ingilizce karakterler giriniz</small>
 
       </div>
-    </div>
+    </div> -->
 
 
 
