--- a/src/app/workshop/member-login/member-login.component.html
+++ b/src/app/workshop/member-login/member-login.component.html
@@ -4,7 +4,7 @@
 
     <h1 class="text-center mb-5">GİRİŞ</h1>
 
-    <div class="form-group " [ngClass]="{ 'input-group-focus': focus === true }">
+    <!-- <div class="form-group " [ngClass]="{ 'input-group-focus': focus === true }">
 
       <label for="username">Takma Ad</label>
       <input [disabled]="isFailed" (blur)="clearError()" (focus)="clearError()" type="text" formControlName="alias"
@@ -15,7 +15,7 @@
         <small *ngIf="loginForm.get('alias').errors?.required" class="text-danger">Takma ad giriniz</small>
         <small *ngIf="loginForm.get('alias').errors?.pattern" class="text-danger">Takma ad için sadece ingilizce karakterler giriniz</small>
       </div>
-    </div>
+    </div> -->
 
 
 
