--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,6 +55,11 @@
   background-image: url('assets/img/login-bg-2.png');
 }
 
+.side-bar-mini{
+  color: #95A5DC;
+    font-size: 1.1rem;
+}
+
 
 .dropdown-width {
   width: 200px;
