--- a/src/app/workshop/report/report.component.html
+++ b/src/app/workshop/report/report.component.html
@@ -3,7 +3,7 @@
 
   <div class="row">
     <div class="container">
-      <button type="button" class="btn btn-danger float-right ml-5" *ngIf="isLeader()" (click)="finishRetro()">Retroyu
+      <button type="button" class="btn btn-danger float-right ml-5" *ngIf="isLeader()" (click)="finishRetro()">Atölyeyi
         Bitir</button>
 
       <button id="generate" class="btn btn-success float-right" *ngIf="isLeader()" (click)="createPdf()">
