--- a/src/app/workshop/company-management/company-management.component.html
+++ b/src/app/workshop/company-management/company-management.component.html
@@ -6,8 +6,7 @@
   </div>
   <div class="col-sm-6 ">
     <button class=" float-right btn btn-theme btn-horizontal-padding btn-vertical-padding" 
-    data-toggle="modal"
-     data-target="#addCompanyModal">Şirket Ekle</button>
+     (click)="addCompany()">Şirket Ekle</button>
   </div>
 </div>
 
@@ -92,6 +91,28 @@
                   [(ngModel)]="company.participantCount"
                   [ngModelOptions]="{ standalone: true }"
                 />
+          </div>
+          
+          <div class="row">
+            <div class="col-12">
+              <div class="form-group">
+                <label>Şirket Logosu</label>
+
+                <app-image-upload  [isPreview]="isPreview" (images)="receiveImages($event)" ></app-image-upload>
+               
+              </div>
+            </div>
+          </div>
+
+          <div class="row" *ngIf="preViewUrl">
+            <div class="col-sm-4">
+              <div class="img-preview">
+                <div class="img-preview__img">
+                  <img class="img-thumbnail"  [src]="preViewUrl"  style="width: 100%;height: 100%; max-width: 200px; max-height: 200px;" />
+
+                </div>
+              </div>
+            </div>
           </div>
        
       </div>
