--- a/src/app/workshop/subject/subject.component.html
+++ b/src/app/workshop/subject/subject.component.html
@@ -28,6 +28,9 @@
           </td>
           <td>
            <div class="d-flex align-items-center justify-content-end">
+            <button class="btn btn-default btn-icon-theme" (click)="getRetro(row.id)"><i
+              class="fa fa-chart-bar"></i></button>
+
             <button class="btn btn-default btn-icon-theme" (click)="editSubject(row.id)"><i
               class="fa fa-edit"></i></button>
           <button class="btn btn-default btn-icon-theme" (click)="
