--- a/src/app/workshop/subject/subject.component.html
+++ b/src/app/workshop/subject/subject.component.html
@@ -96,3 +96,57 @@
     </div>
   </form>
 </div>
+
+
+<div class="modal fade" id="retroModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+  aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle"> Atölyeler </h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <table class="table w-100 table-theme">
+            <thead>
+              <tr>
+                <th>Lider</th>
+      
+                <th class="text-right">Rapor</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let row of retroList">
+                <td>
+                  <div class="d-flex align-items-center" style="padding: .375rem 0;">
+                    {{ row?.leader?.userName }}
+                  </div>
+                </td>
+                <td>
+                 <div class="d-flex align-items-center justify-content-end">
+                  <button class="btn btn-default btn-icon-theme" (click)="getRetroReport(row.retro.id)"><i
+                    class="fa fa-file-pdf fa-2x"></i></button>
+                 </div>
+      
+                </td>
+              </tr>
+      
+      
+            </tbody>
+          </table>
+          <div class="my-overlay" *ngIf="showOverlay">
+            <i class="fa fa-spinner fa-spin" aria-hidden="true"></i>
+          </div>
+        </div>
+        <div class="modal-footer d-flex align-items-center">
+          <button type="button" class="btn btn-default btn-outline-theme btn-block btn-vertical-padding"
+            data-dismiss="modal">Kapat
+          </button>
+         
+        </div>
+      </div>
+    </div>
+</div>
+
