--- a/src/app/workshop/login/login.component.html
+++ b/src/app/workshop/login/login.component.html
@@ -3,7 +3,7 @@
   <form [formGroup]="loginForm" (ngSubmit)="logIn()" class="create-retro__form m-5">
 
 
-    <h1 class="text-center mb-5">GİRİŞ</h1>
+    <h1 class="text-center mb-5"> {{ 'login.title' | translate }}</h1>
 
 
 
